--- a/js/package.json
+++ b/js/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "client.js",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.6.7",
+    "csv-writer": "^1.6.0",
     "form-data": "^4.0.0"
   },
   "scripts": {
     "start": "node client.js"
   }
 }
-  
