--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,14 @@ WebsocketOldFiles/*
 
 # Client from npm init
 /js/node_modules/
+
+# compiled binaries
+/cpp/delete_everything
+/cpp/example_code_patch
+/cpp/example_equation_patch
+/cpp/example_getting_started
+/cpp/example_hard_data_multiple
+/cpp/example_hard_data_patch
+/cpp/example_soft_data_patch
+/cpp/example_solar_plant_sizing
+/cpp/example_thermostat
